--- a/radio.html
+++ b/radio.html
@@ -19,7 +19,7 @@ title: Radio
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">Szkolenia</h5>
-                        <p class="card-text text-muted">Szkolenia i egzaminy dla operatorów radiokomunikacyjnych, SRC GMDSS oraz inne kursy związane z łącznością radiową.</p>
+                        <p class="card-text text-muted">Szkolenia i egzaminy dla operatorów w służbie radiokomunikacyjnej amatorskiej, SRC GMDSS oraz inne kursy związane z łącznością radiową.</p>
                     </div>
                 </div>
             </a>
@@ -62,7 +62,7 @@ title: Radio
             <a href="/radio/terenowe/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Prace terenowe</h5>
+                        <h5 class="card-title">Aktywacje terenowe</h5>
                         <p class="card-text text-muted">Aktywności polowe, wyjazdy i prace terenowe klubowe - operacje z terenu, testy sprzętu i inne działania poza klubem.</p>
                     </div>
                 </div>
