--- a/radio/szkolenia/index.html
+++ b/radio/szkolenia/index.html
@@ -8,7 +8,7 @@ permalink: /radio/szkolenia/
         <div class="col-12">
             <a href="/radio/" class="text-decoration-none">← Wróć do radio</a>
             <h1 class="h3 mt-3">Szkolenia</h1>
-            <p class="text-muted">Szkolenia i egzaminy dla operatorów radiokomunikacyjnych, SRC GMDSS oraz inne kursy związane z łącznością radiową.</p>
+            <p class="text-muted">Szkolenia i egzaminy dla operatorów w służbie radiokomunikacyjnej amatorskiej, SRC GMDSS oraz inne kursy związane z łącznością radiową.</p>
             <hr>
         </div>
     </div>
