--- a/radio.html
+++ b/radio.html
@@ -63,7 +63,7 @@ title: Radio
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">Aktywacje terenowe</h5>
-                        <p class="card-text text-muted">Aktywności polowe, wyjazdy i prace terenowe klubowe - operacje z terenu, testy sprzętu i inne działania poza klubem.</p>
+                        <p class="card-text text-muted">Aktywności terenowe - operacje z terenu, testy sprzętu i inne działania poza klubem.</p>
                     </div>
                 </div>
             </a>
