--- a/radio/terenowe/index.html
+++ b/radio/terenowe/index.html
@@ -7,8 +7,8 @@ permalink: /radio/terenowe/
     <div class="row">
         <div class="col-12">
             <a href="/radio/" class="text-decoration-none">← Wróć do radio</a>
-            <h1 class="h3 mt-3">Prace terenowe</h1>
-            <p class="text-muted">Aktywności polowe, wyjazdy i prace terenowe klubowe - operacje z terenu, testy sprzętu i inne działania poza klubem.</p>
+            <h1 class="h3 mt-3">Aktywności terenowe</h1>
+            <p class="text-muted">Aktywności terenowe - operacje z terenu, testy sprzętu i inne działania poza klubem.</p>
             <hr>
         </div>
     </div>
