--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ layout: default
             <a href="/klub/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Informacje o klubie</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-people-fill text-primary" aria-hidden="true"></i>
+                            <span>Informacje o klubie</span>
+                        </h5>
                         <p class="card-text text-muted">Informacje, historia, członkowie i archiwum klubu SP2ZIE</p>
                     </div>
                 </div>
@@ -27,7 +30,10 @@ layout: default
             <a href="/projekty/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Projekty klubowe</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-folder-fill text-primary" aria-hidden="true"></i>
+                            <span>Projekty klubowe</span>
+                        </h5>
                         <p class="card-text text-muted">Satelity PW-Sat, ARISS, APRS, przemienniki i inne innowacyjne projekty</p>
                     </div>
                 </div>
@@ -38,7 +44,10 @@ layout: default
             <a href="/radio/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Działalność radiowa</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-broadcast-pin text-primary" aria-hidden="true"></i>
+                            <span>Działalność radiowa</span>
+                        </h5>
                         <p class="card-text text-muted">Szkolenia, aktywacje latarni, satelity i aktywacje terenowe</p>
                     </div>
                 </div>
@@ -49,7 +58,10 @@ layout: default
             <a href="/zawody/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Zawody</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-trophy-fill text-primary" aria-hidden="true"></i>
+                            <span>Zawody</span>
+                        </h5>
                         <p class="card-text text-muted">Udział w zawodach radiowych i osiągnięcia klubowe</p>
                     </div>
                 </div>
