--- a/klub.html
+++ b/klub.html
@@ -17,7 +17,10 @@ permalink: /klub/
             <a href="/o-nas/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">O nas</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-people-fill text-primary" aria-hidden="true"></i>
+                            <span>O nas</span>
+                        </h5>
                         <p class="card-text text-muted">Informacje o klubie, krótkofalarstwie i naszych znakach okolicznościowych</p>
                     </div>
                 </div>
@@ -28,7 +31,10 @@ permalink: /klub/
             <a href="/historia/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Historia klubu</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-clock-history text-primary" aria-hidden="true"></i>
+                            <span>Historia klubu</span>
+                        </h5>
                         <p class="card-text text-muted">Kalendarium wydarzeń i osiągnięć klubu od 1995 roku</p>
                     </div>
                 </div>
@@ -39,7 +45,10 @@ permalink: /klub/
             <a href="/czlonkowie/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Członkowie</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-person-vcard-fill text-primary" aria-hidden="true"></i>
+                            <span>Członkowie</span>
+                        </h5>
                         <p class="card-text text-muted">Lista członków klubu z znakami wywoławczymi i funkcjami</p>
                     </div>
                 </div>
@@ -50,7 +59,10 @@ permalink: /klub/
             <a href="/archiwum/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Archiwum</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-archive-fill text-primary" aria-hidden="true"></i>
+                            <span>Archiwum</span>
+                        </h5>
                         <p class="card-text text-muted">Archiwalne wpisy i dokumenty klubowe</p>
                     </div>
                 </div>
