--- a/projekty.html
+++ b/projekty.html
@@ -18,7 +18,10 @@ title: Projekty klubowe
             <a href="/projekty/pw-sat3/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">PW-Sat3 (Per Radio Ad Astra)</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-globe2 text-primary" aria-hidden="true"></i>
+                            <span>PW-Sat3 (Per Radio Ad Astra)</span>
+                        </h5>
                         <p class="card-text text-muted">Projekt budowy naziemnej stacji nadawczo-odbiorczej do dwustronnej łączności z satelitą PW-Sat3.</p>
                     </div>
                 </div>
@@ -29,7 +32,10 @@ title: Projekty klubowe
             <a href="/projekty/pw-sat2/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">PW-Sat2</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-globe2 text-primary" aria-hidden="true"></i>
+                            <span>PW-Sat2</span>
+                        </h5>
                         <p class="card-text text-muted">Budowa stacji odbiorczej i odbiór sygnałów z drugiego polskiego satelity studenckiego.</p>
                     </div>
                 </div>
@@ -40,7 +46,10 @@ title: Projekty klubowe
             <a href="/projekty/pw-sat1/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">PW-Sat1</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-globe2 text-primary" aria-hidden="true"></i>
+                            <span>PW-Sat1</span>
+                        </h5>
                         <p class="card-text text-muted">Współpraca przy budowie zapasowej stacji naziemnej do łączności z pierwszym polskim nanosatelitą PW-Sat.</p>
                     </div>
                 </div>
@@ -51,7 +60,10 @@ title: Projekty klubowe
             <a href="/projekty/sr0wx/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">SR0WX</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-cloud-sun-fill text-primary" aria-hidden="true"></i>
+                            <span>SR0WX</span>
+                        </h5>
                         <p class="card-text text-muted">Stacje pogodowe systemu SR0WX nadające komunikaty pogodowe na częstotliwości 144.950 MHz z informacjami o bieżącej i prognozowanej pogodzie.</p>
                     </div>
                 </div>
@@ -62,7 +74,10 @@ title: Projekty klubowe
             <a href="/projekty/ariss/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">ARISS</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-chat-left-dots-fill text-primary" aria-hidden="true"></i>
+                            <span>ARISS</span>
+                        </h5>
                         <p class="card-text text-muted">Pierwsza polska łączność radiowa z astronautami na Międzynarodowej Stacji Kosmicznej ISS w 2004 roku oraz kolejne sesje w ramach programu ARISS.</p>
                     </div>
                 </div>
@@ -73,7 +88,10 @@ title: Projekty klubowe
             <a href="/projekty/aprs/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">APRS</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-signpost-split-fill text-primary" aria-hidden="true"></i>
+                            <span>APRS</span>
+                        </h5>
                         <p class="card-text text-muted">Bramka APRS (Automatic Packet Reporting System) - automatyczny system raportowania pakietowego dla śledzenia pozycji i przesyłania danych telemetrycznych.</p>
                     </div>
                 </div>
@@ -84,7 +102,10 @@ title: Projekty klubowe
             <a href="/projekty/przemienniki/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Przemienniki</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-broadcast-pin text-primary" aria-hidden="true"></i>
+                            <span>Przemienniki</span>
+                        </h5>
                         <p class="card-text text-muted">Projektowanie, budowa i eksploatacja przemienników radiowych klubowych, w tym SR2Z i innych systemów VHF/UHF.</p>
                     </div>
                 </div>
@@ -95,7 +116,10 @@ title: Projekty klubowe
             <a href="/projekty/isstv/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">ISS TV</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-camera-video-fill text-primary" aria-hidden="true"></i>
+                            <span>ISS TV</span>
+                        </h5>
                         <p class="card-text text-muted">Odbiór transmisji SSTV (Slow Scan Television) z Międzynarodowej Stacji Kosmicznej ISS - obrazy transmitowane przez astronautów z pokładu stacji.</p>
                     </div>
                 </div>
@@ -106,7 +130,10 @@ title: Projekty klubowe
             <a href="/projekty/inne/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Inne projekty</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-folder-fill text-primary" aria-hidden="true"></i>
+                            <span>Inne projekty</span>
+                        </h5>
                         <p class="text-muted">Pozostałe projekty klubowe.</p>
                     </div>
                 </div>
