--- a/radio.html
+++ b/radio.html
@@ -18,7 +18,10 @@ title: Radio
             <a href="/radio/szkolenia/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Szkolenia</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-mortarboard-fill text-primary" aria-hidden="true"></i>
+                            <span>Szkolenia</span>
+                        </h5>
                         <p class="card-text text-muted">Szkolenia i egzaminy dla operatorów w służbie radiokomunikacyjnej amatorskiej, SRC GMDSS oraz inne kursy związane z łącznością radiową.</p>
                     </div>
                 </div>
@@ -29,7 +32,10 @@ title: Radio
             <a href="/radio/latarnie/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Latarnie morskie</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-lightbulb-fill text-primary" aria-hidden="true"></i>
+                            <span>Latarnie morskie</span>
+                        </h5>
                         <p class="card-text text-muted">Aktywacje latarni morskich w ramach międzynarodowych zawodów i programów (International Lighthouse Lightship Weekend).</p>
                     </div>
                 </div>
@@ -40,7 +46,10 @@ title: Radio
             <a href="/radio/tsr2009/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Tall Ships Races 2009</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-compass-fill text-primary" aria-hidden="true"></i>
+                            <span>Tall Ships Races 2009</span>
+                        </h5>
                         <p class="card-text text-muted">Szczególna aktywność stacji klubowej podczas zlotu żaglowców w Gdyni w 2009 roku - łączności i wydarzenia specjalne.</p>
                     </div>
                 </div>
@@ -51,7 +60,10 @@ title: Radio
             <a href="/radio/wosp/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Wielka Orkiestra Świątecznej Pomocy</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-heart-pulse-fill text-primary" aria-hidden="true"></i>
+                            <span>Wielka Orkiestra Świątecznej Pomocy</span>
+                        </h5>
                         <p class="card-text text-muted">Udział klubu w akcjach Wielkiej Orkiestry Świątecznej Pomocy - łączności i wsparcie organizacyjne.</p>
                     </div>
                 </div>
@@ -62,7 +74,10 @@ title: Radio
             <a href="/radio/terenowe/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Aktywacje terenowe</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-geo-alt-fill text-primary" aria-hidden="true"></i>
+                            <span>Aktywacje terenowe</span>
+                        </h5>
                         <p class="card-text text-muted">Aktywności terenowe - operacje z terenu, testy sprzętu i inne działania poza klubem.</p>
                     </div>
                 </div>
@@ -73,7 +88,10 @@ title: Radio
             <a href="/radio/qo-100/" class="text-decoration-none">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">QO-100 / Es'hail 2</h5>
+                        <h5 class="card-title d-flex align-items-center gap-2">
+                            <i class="bi bi-globe2 text-primary" aria-hidden="true"></i>
+                            <span>QO-100 / Es'hail 2</span>
+                        </h5>
                         <p class="card-text text-muted">Łączności przez satelitę geostacjonarny Es'hail 2 (QO-100) - pierwszy satelita amatorski w orbicie geostacjonarnej.</p>
                     </div>
                 </div>
